--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Megh – Voice Bot</title>
+  <title>100x Voice Bot</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
