Change the image and text

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <main class="container">
-    <h1>Megh – Voice Bot</h1>
-    <p class="hint">Tap the mic, ask your question, and hear the answer. No setup needed.</p>
+    <h1>100x Voice Bot</h1>
+    <p class="hint">Tap the mic, ask your question, and hear the answer.</p>
 
     <div class="controls">
       <button id="micBtn">🎙️ Start</button>
@@ -32,7 +32,7 @@
       <button type="submit">Send</button>
     </form>
 
-    <footer>Built for 100x • Voice in browser • Answers powered by a private serverless API</footer>
+    <footer>Built for 100x • Voice in browser</footer>
   </main>
 
   <script>
